--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "html-to-image": "^1.11.11",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.220.0",
     "prettier": "^3.4.2",
     "react": "^18.2.0",
