--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.3",
     "@xyflow/react": "^12.3.6",
+    "antd": "^5.24.3",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^12.4.10",
     "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
     "lucide-react": "^0.220.0",
